<resources>
    <string name="app_name">PrivacyGame</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_client_register">Join Session</string>

    <!-- Strings related to actionbar -->
    <string name="content_hint">Content</string>
    <string name="drawer_hint">Drawer</string>
    <string name="create_or_join">Create Or Join A Session</string>
    <string name="category">Category</string>
    <string name="create">Create Session</string>
    <string name="join">Join Session</string>
    <string name="lobby">Lobby</string>
    <string name="question">Question</string>
    <string name="voted">Voted</string>
    <string name="guess">Guess</string>
    <string name="score">Score</string>
    <string name="amazing">You are amazing</string>
    <string name="choose">Choose wisely</string>
    <string name="fantastic">You are fantastic</string>
    <string name="handsome">You are handsome</string>
    <string name="nice">You are looking nice today</string>
    <string name="lucky">You will be lucky next round</string>
    <string name="funny">You are funny</string>
    <string name="adorable">You are really adorable</string>
    <string name="cool">You are cool</string>

    <!-- Strings related to create or join -->
    <string name="create_or_join_informationText">Create:     A new game session will be created. \nYou will be the host and playmaker.  \nOthers will be able to join your session. \n\nJoin: Join an already created session by its unique ID. You will be a normal player.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">players name</string>
    <string name="prompt_password">session ID</string>
    <string name="action_sign_in">join</string>
    <string name="action_sign_in_short">close</string>
    <string name="error_invalid_name">This name is too long</string>
    <string name="error_invalid_password">This ID is not known</string>
    <string name="error_incorrect_password">This ID is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="client_register_join_button">join</string>
    <string name="client_register_prompt_name">name</string>
    <string name="client_register_prompt_sessionID">session ID</string>
    <string name="title_activity_client_lobby">client_lobby</string>
    <string name="client_register_informationText">Please enter your name. \nIt will be used for identification during the game. \n\nPlease enter the ID of the play you want to join in. The session ID will be displayed at the host\'s app after a session was created.</string>
    <string name="client_statistic_informationText">Here you can see your score in this round.</string>

    <string name="host_register_join_button">host</string>
    <string name="host_register_prompt_name">name</string>
    <string name="host_register_prompt_sessionID">session ID: 1234567890</string>
    <string name="title_activity_host_lobby">client_lobby</string>
    <string name="host_register_informationText">Please enter your name. \nIt will be used for identification during the game. \nThe session ID is for other players to join your game.</string>


    <!-- Strings related to category -->
    <string name="host_category_information">Here you can choose from which category the questions will be asked.</string>

    <!-- Strings related to lobby -->
    <string name="client_lobby_information">Please wait while other players join your session.\nThe game will start as soon as your host agrees to.</string>
    <string name="host_lobby_information">Please wait while other players join your session.\nWhen all players joined your game, you can start it by clicking continue.\nDon\'t forget: Others will be able to join even during an already started game via the session ID. </string>


    <!-- Strings related to question -->
    <string name="sample_question">Have you ever wanted to.. ?</string>
    <string name="client_question_information">Please answer following question truthfully.\nYou will get to the next step after everyone has answered or your host has decided to continue manually.</string>
    <string name="host_question_information">Please answer following question truthfully.\nYou will get to the next step after everyone has answered or you decide to continue manually.\nWarning: When you click continue while others haven\'t answered yet, they won\'t be able to participate in this round. They can join again with the following question. </string>

    <!-- Strings related to question -->
    <string name="client_guess_information">Now guess correctly how many of these players answered the last Question with YES - yourself included.</string>
    <string name="host_guess_information">Now guess correctly how many of these players answered the last Question with YES - yourself included.</string>

    <!-- Strings related to voted -->
    <string name="host_voted_information">Please wait while other players answer the question.\nWhen all players answered, the next step will automatically appear. But you can manually start it by clicking continue.\nWarning: When you click continue while others haven\'t answered yet, they won\'t be able to participate in this round. They can join again with the following question. </string>


    <!-- Strings related to ActionBar -->
    <string name="actionbar_id"># </string>
    <string name="actionbar_name">Name</string>
    <string name="actionbar_points">Points</string>
    <string name="actionbar_lang">Language</string>
    <string name="actionbar_skip">Skip</string>
    <string name="actionbar_quit">Quit</string>
    <string name="actionbar_credits">Credits</string>

    <!-- Strings related to ActionBar -->
    <string name="dialog_credits">Special thanks goes to ..  </string>
    <string name="dialog_quit">Are you sure you want to leave this game?</string>
    <string name="dialog_skip">Are you sure you want to skip this question?</string>
    <string name="dialog_question">Are you sure you want to skip this question?</string>
    <string name="dialog_language">Are you sure you want to change your language? Eng/Ger</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="credits_chrisrenke">
        Copyright 2014 Chris Renke
        \n
        \nLicensed under the Apache License, Version 2.0 (the "License")
        \nYou may not use this file except in compliance with the License.
        You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
        \nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
    </string>

     <string name="credits_henriksandstroem">
         Developed By
         \nHenrik Sandström [@heinrisch](https://twitter.com/Heinrisch)
         \nStyled By
         \nMarcus Gellemark [Dribbble](http://dribbble.com/Gellermark)
         \nAdditional Credit
        \nChris Banes [chrisbanes](https://github.com/chrisbanes)
        \nQuentin DOMMERC [dommerq](https://github.com/dommerq)
        \nAaron Rietschlin [@AaronRietschlin](https://twitter.com/AaronRietschlin)
        \nGuillaume Imbert [HozakaN](https://github.com/HozakaN)
        \n
        \nLicensed under the Apache License, Version 2.0 (the "License")
        \nYou may not use this file except in compliance with the License.
        You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
        \nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
    </string>

      <string name="credits_reypham">
         Copyright 2015 Rey Pham.
        \nLicensed under the Apache License, Version 2.0 (the "License")
        \nYou may not use this file except in compliance with the License.
        You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
        \nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
    </string>

    <string name="dialog_game_doesntexist">Your game has been terminated.</string>

</resources>
