<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_dimen"
        android:background="@color/oxblood"
        android:focusableInTouchMode="true"
        >

        <ImageView
            android:id="@+id/host_register_drawer_indicator"
            android:layout_width="@dimen/actionbar_dimen"
            android:layout_height="@dimen/actionbar_dimen"
            android:scaleType="centerInside"
            android:background="@drawable/drawer_selector"
            android:layout_gravity="start"
            />

        <TextView
            android:id="@+id/indicator_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_dimen"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_gravity="end"
            android:text="@string/join"
            android:textStyle="bold"
            android:textColor="@color/grain"
            android:gravity="center"
            android:background="@drawable/drawer_selector"
            />

    </FrameLayout>

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/host_register_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:paddingBottom="@dimen/activity_vertical_margin"
                      android:paddingLeft="@dimen/activity_horizontal_margin"
                      android:paddingRight="@dimen/activity_horizontal_margin"
                      android:paddingTop="@dimen/activity_vertical_margin"
                      tools:context="at.fhooe.mc.android.host_register"
                      android:background="@color/tan">

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/host_register_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/host_register_informationText"
                android:id="@+id/textView5"
                android:layout_gravity="top"
                />

            <ScrollView
                android:id="@+id/host_register_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:foregroundGravity="bottom"
                    android:baselineAligned="false">

                    <com.wrapp.floatlabelededittext.FloatLabeledEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        float:fletTextAppearance="@style/FormFloating">

                        <EditText
                            android:id="@+id/host_register_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/host_register_prompt_name"
                            android:inputType="textFilter"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/blackboard"
                            />

                    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                    <com.wrapp.floatlabelededittext.FloatLabeledEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        float:fletTextAppearance="@style/FormFloating">

                        <EditText
                            android:id="@+id/host_register_sessionID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/host_register_prompt_sessionID"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textFilter"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/blackboard" />
                    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                    <Button
                        android:id="@+id/host_register_join_button"
                        style="@style/ButtonTheme"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/host_register_join_button"
                        android:textStyle="bold"
                        android:gravity="bottom|right"
                        android:background="@drawable/button_design"/>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/host_register_drawer_list"
                  android:layout_width="120dp"
                  android:layout_height="match_parent"
                  android:background="#cccc"
                  android:choiceMode="singleChoice"
                  android:divider="@android:color/transparent"
                  android:dividerHeight="0dp"
                  android:layout_gravity="left"/>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>