<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_dimen"
        android:background="@color/oxblood"
        android:focusableInTouchMode="true"
        >

        <ImageView
            android:id="@+id/client_question_drawer_indicator"
            android:layout_width="@dimen/actionbar_dimen"
            android:layout_height="@dimen/actionbar_dimen"
            android:scaleType="centerInside"
            android:background="@drawable/drawer_selector"
            android:layout_gravity="start"
            />

        <TextView
            android:id="@+id/client_question_indicator_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_dimen"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_gravity="end"
            android:text="@string/question"
            android:textStyle="bold"
            android:textColor="@color/grain"
            android:gravity="center"
            android:background="@drawable/drawer_selector"
            />

    </FrameLayout>

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/client_question_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="at.fhooe.mc.android.client_question"
            android:background="@color/tan">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_question_information"
                android:id="@+id/textView"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_question"
                android:id="@+id/question"
                android:layout_marginTop="80dp"
                style="@style/Question"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <Button
                style="ButtonTheme"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="YES"
                android:id="@+id/client_question_yes"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button_design"
                android:layout_gravity="left"
                android:gravity="bottom|right"
                android:layout_marginTop="180dp"/>

            <Button
                style="ButtonTheme"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="NO"
                android:id="@+id/client_question_no"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button_design"
                android:layout_gravity="right"
                android:gravity="left|bottom"
                />

        </LinearLayout>

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/client_question_drawer_list"
                  android:layout_width="120dp"
                  android:layout_height="match_parent"
                  android:background="#cccc"
                  android:choiceMode="singleChoice"
                  android:divider="@android:color/transparent"
                  android:dividerHeight="0dp"
                  android:layout_gravity="left"/>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>